--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,11 @@
-PORT=8000
+PORT=5000
+HOST='localhost'
+USER='root'
+PASSWORD='password'
+DATABASE='sql_hr'
+SALT='order-products-app'
+JWT_SECRET='secretkey'
+
 
 
 
