--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "cross-env NODE_ENV=produciton node app",
-    "dev": "cross-env NODE_ENV=development nodemon app"
+    "dev": "cross-env NODE_ENV=development nodemon app",
+    "format": "prettier --write ."
   },
   "author": "Abdelrahman Hanafy",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "prettier": "^2.2.1",
     "sequelize": "^6.4.0"
   },
   "devDependencies": {
