--- a/config/config.env
+++ b/config/config.env
@@ -2,7 +2,12 @@ PORT=4000
 HOST='localhost'
 USER='root'
 PASSWORD='password'
-DATABASE='sql_hr'
+DATABASE_Development='dev'
+DATABASE_TEST = 'test'
+DATABASE_USER = 'root'
+DATABASE_PASSWORD = 'password'
+DATABASE_HOST = 'localhost'
+DATABASE_DIALECT = 'mysql'
 SALT='order-products-app'
 JWT_SECRET='secretkey'
 
